--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "devices catalog",
   "private": true,
   "dependencies": {
-    "express": "3.3.5",
-    "ejs": "0.8.4"
+    "express": "3.3.5"
   },
   "version": "0.0.1"
 }
