--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "description": "devices catalog",
   "private": true,
   "dependencies": {
-    "express": "3.3.5"
+    "express": "3.3.5",
+    "frisby" : "0.8.1"
   },
   "version": "0.0.1"
 }
