--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "devices catalog",
   "private": true,
   "dependencies": {
-    "express": "3.3.5",
+    "express": "4.7.2",
+    "morgan" : "1.2.2",
+    "body-parser" : "1.5.2",
     "frisby" : "0.8.1"
   },
   "version": "0.0.1"
