--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "description": "devices catalog",
   "private": true,
   "dependencies": {
+    "body-parser": "1.5.2",
     "express": "4.7.2",
-    "morgan" : "1.2.2",
-    "body-parser" : "1.5.2",
-    "frisby" : "0.8.1"
+    "frisby": "0.8.1",
+    "morgan": "1.2.2",
+    "node-getopt": "^0.2.3"
   },
   "version": "0.0.1"
 }
