--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "4.7.2",
     "frisby": "0.8.1",
     "morgan": "1.2.2",
-    "node-getopt": "^0.2.3"
+    "node-getopt": "^0.2.3",
+    "swagger-node-express": "^2.1.0"
   },
   "version": "0.0.1"
 }
